--- a/src/styles/cmps/_projects.scss
+++ b/src/styles/cmps/_projects.scss
@@ -1,41 +1,58 @@
 .projects {
     padding-inline: var(--padding-inline);
+    padding-block-start: 5rem;
     padding-block-end: 5rem;
+
+    @include for-table-layout {
+        padding-block-start: 6rem;
+    }
+
+    @include for-narrow-layout {
+        padding-block-start: 7rem;
+    }
+
+    @include for-wide-layout {
+        padding-block-start: 8rem;
+    }
+
+    @include for-desktop-layout {
+        padding-block-start: 10rem;
+    }
 
     h1 {
         // margin-block-end: 5rem;
         color: $font-clr2;
-        font-size: 3.5rem;
-        line-height: 3.5rem;
+        font-size: 2.8rem;
+        line-height: 2.8rem;
 
         @include for-mobile-layout {
-            font-size: 4rem;
+            font-size: 3.2rem;
         }
 
         @include for-table-layout {
-            font-size: 5.2rem;
-            line-height: 5.5rem;
+            font-size: 4.2rem;
+            line-height: 4.4rem;
         }
 
         @include for-narrow-layout {
-            line-height: 6rem;
-            font-size: 6.4rem;
+            line-height: 4.8rem;
+            font-size: 5.1rem;
         }
 
         @include for-wide-layout {
             // margin-block-end: 8rem;
-            line-height: 7rem;
-            font-size: 7.5rem;
+            line-height: 5.6rem;
+            font-size: 6rem;
         }
 
         @include for-desktop-layout {
-            line-height: 9rem;
-            font-size: 9.2rem;
+            line-height: 7.2rem;
+            font-size: 7.4rem;
         }
 
         @include for-full-layout {
-            line-height: 10rem;
-            font-size: 10.8rem;
+            line-height: 8rem;
+            font-size: 8.6rem;
         }
     }
 }
