--- a/src/styles/cmps/_tools.scss
+++ b/src/styles/cmps/_tools.scss
@@ -6,30 +6,30 @@
         color: $font-clr3;
         text-align: center;
         line-height: 1.5;
-        font-size: 2.5rem;
+        font-size: 2rem;
 
         @include for-mobile-layout {
-            font-size: 3rem;
+            font-size: 2.4rem;
         }
 
         @include for-table-layout {
-            font-size: 4rem;
+            font-size: 3.2rem;
         }
 
         @include for-narrow-layout {
-            font-size: 5rem;
+            font-size: 4rem;
         }
 
         @include for-wide-layout {
-            font-size: 6rem;
+            font-size: 4.8rem;
         }
 
         @include for-desktop-layout {
-            font-size: 7rem;
+            font-size: 5.6rem;
         }
 
         @include for-full-layout {
-            font-size: 8rem;
+            font-size: 6.4rem;
         }
     }
 }
